# irma-chat

./: Cargo.toml  README.md  package.json  rollup.config.js  tsconfig.json
frontend/src/: App.svelte  Chat.svelte  Message.svelte  ResetButton.svelte  SessionOverlay.svelte  StartButton.svelte  global.scss  session.ts  util.ts
src/: auth_socket.rs  chat_socket.rs  config.rs  errors.rs  irma.rs  irma_session.rs  jwt.rs  main.rs  session_jwt.rs  socket_request.rs  socket_response.rs  test.rs
