[package]
name = "irma-chat"
version = "0.1.0"
authors = ["Marlon Baeten <marlon@tweedegolf.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.0", features = ["json", "stream"] }
tokio = { version = "1.1.0", default-features = false, features = ["full"] }
bytes = "1.0.1"
serde_json = "1.0"
jsonwebtoken = "7.2.0"
chrono = "0.4.19"
tokio-tungstenite = "0.13.0"
dotenv = "0.15.0"
log = "0.4.11"
env_logger = "0.8.3"
futures-channel = "0.3.12"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
futures-core = "0.3.12"

[dev-dependencies]
mockito = "0.28.0"